--- a/Views/userViews/cart.ejs
+++ b/Views/userViews/cart.ejs
@@ -17,9 +17,6 @@
     <!-- Site Title -->
     <title>ProGear</title>
 
-    <!--
-            CSS
-            ============================================= -->
     <link rel="stylesheet" href="css/linearicons.css">
     <link rel="stylesheet" href="css/owl.carousel.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -117,8 +114,8 @@
                                 <td></td>
                                 <td>
                                     <div class="checkout_btn_inner d-flex align-items-center">
-                                        <a class="gray_btn" href="/">Continue Shopping</a>
-                                        <a class="primary-btn" href="/checkout">Checkout</a>
+                                        <a class="gray_btn" href="/" style="border-radius: 0;">Continue Shopping</a>
+                                        <a class="primary-btn" href="/checkout">GO TO Checkout</a>
                                     </div>
                                 </td>
                             </tr>
