--- a/Views/adminViews/bannerManagement.ejs
+++ b/Views/adminViews/bannerManagement.ejs
@@ -1,3 +1,24 @@
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.1.5/dist/sweetalert2.min.css">
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.1.5/dist/sweetalert2.min.js"></script>
+
+<style>
+  .swal2-modal .swal2-title{
+    font-size: 25px;
+      line-height: 1;
+      font-weight: 500;
+      color: #f3f7fb;
+      font-weight: initial;
+      margin-bottom: 0;
+    }
+    .swal2-container.swal2-center>.swal2-popup{
+    grid-column: 2;
+      grid-row: 2;
+      align-self: center;
+      BACKGROUND-COLOR: rgb(26 27 34);
+      justify-self: center;
+    }
+</style>
 <%- include('../layouts/adminHeader.ejs') %>
 <!-- partial -->
 <div class="main-panel">
@@ -47,7 +68,7 @@
             </span>
           </td>
           <td><a href="/admin/updateBannerGet?id=<%= banner._id %>"><i class="mdi mdi-pencil"></i></a></td>
-          <td><a href="/admin/deleteBanner?id=<%= banner._id %>"><i class="mdi mdi-delete"></i></a></td>
+          <td><center><i class="mdi mdi-delete" onclick="deleteBanner('<%= banner._id %>')"></i></center></td>
         </tr>
       <% }); %>
   
@@ -63,3 +84,36 @@
 </div>
 
 <%- include('../layouts/adminFooter.ejs') %>
+
+<script>
+  function deleteBanner(id)
+  {
+    Swal.fire({
+      title: 'Are you sure to delete this Banner?',
+      text: "You won't be able to revert this!",
+      // icon: 'warning',
+      showCancelButton: true,
+      confirmButtonColor: '#3085d6',
+      cancelButtonColor: '#d33',
+      confirmButtonText: 'Delete',
+      timer: 6000
+    }).then((result) => {
+      if (result.isConfirmed) {
+        $.ajax({
+          url:'/admin/deleteBanner',
+          method:'post',
+          data: {
+            id: id,
+          },
+          success:(response)=>
+          {
+            if(response)
+            {
+              location.reload()
+            }
+          }
+        })
+      }
+    })
+  }
+</script>
