--- a/Views/adminViews/categoryManagement.ejs
+++ b/Views/adminViews/categoryManagement.ejs
@@ -1,4 +1,26 @@
-	<%- include('../layouts/adminHeader.ejs') %>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.1.5/dist/sweetalert2.min.css">
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.1.5/dist/sweetalert2.min.js"></script>
+
+<style>
+  .swal2-modal .swal2-title{
+    font-size: 25px;
+      line-height: 1;
+      font-weight: 500;
+      color: #f3f7fb;
+      font-weight: initial;
+      margin-bottom: 0;
+    }
+    .swal2-container.swal2-center>.swal2-popup{
+    grid-column: 2;
+      grid-row: 2;
+      align-self: center;
+      BACKGROUND-COLOR: rgb(26 27 34);
+      justify-self: center;
+    }
+</style>
+
+  <%- include('../layouts/adminHeader.ejs') %>
         <!-- partial -->
  <div class="main-panel">
   <div class="content-wrapper">
@@ -37,7 +59,7 @@
                       </span>
                     </td>
                     <td><a href="/admin/updateCategory?userid=<%= category._id %>"><i class="mdi mdi-border-color"></i></a></td>
-                    <td><a href="/admin/changeStatus?userid=<%= category._id %>"><i class="mdi mdi-delete-variant"></i></a></td>
+                    <td><a onclick="changeStatus('<%= category._id %>')"><i class="mdi mdi-delete-variant"></i></a></td>
                     <% if (category.is_listed) { %>
                       <td><label class="badge badge-success">Listed</label></td>
                     <% } else { %>
@@ -57,3 +79,37 @@
           <!-- content-wrapper ends -->
           <!-- partial:../../partials/_footer.html -->
  <%- include('../layouts/adminFooter.ejs') %>
+
+
+ <script>
+  function changeStatus(userid)
+  {
+    Swal.fire({
+      title: 'Are you sure to change Category Status?',
+      text: "",
+      // icon: 'warning',
+      showCancelButton: true,
+      confirmButtonColor: '#3085d6',
+      cancelButtonColor: '#d33',
+      confirmButtonText: 'Change',
+      timer: 6000
+    }).then((result) => {
+      if (result.isConfirmed) {
+        $.ajax({
+          url:'/admin/changeStatus',
+          method:'post',
+          data: {
+            userid: userid,
+          },
+          success:(response)=>
+          {
+            if(response)
+            {
+              location.reload()
+            }
+          }
+        })
+      }
+    })
+  }
+</script>
