--- a/Views/adminViews/couponManagement.ejs
+++ b/Views/adminViews/couponManagement.ejs
@@ -1,3 +1,25 @@
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.1.5/dist/sweetalert2.min.css">
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.1.5/dist/sweetalert2.min.js"></script>
+
+<style>
+  .swal2-modal .swal2-title{
+    font-size: 25px;
+      line-height: 1;
+      font-weight: 500;
+      color: #f3f7fb;
+      font-weight: initial;
+      margin-bottom: 0;
+    }
+    .swal2-container.swal2-center>.swal2-popup{
+    grid-column: 2;
+      grid-row: 2;
+      align-self: center;
+      BACKGROUND-COLOR: rgb(26 27 34);
+      justify-self: center;
+    }
+</style>
+
 <%- include('../layouts/adminHeader.ejs') %>
 <!-- partial -->
 <div class="main-panel">
@@ -23,6 +45,7 @@
             <th>Min Purchase</th>
             <th>Max Discount Value</th>
             <th>Validity</th>
+            <th>Remove</th>
           </tr>
         </thead>
         <tbody>
@@ -33,6 +56,7 @@
                 <td>₹<%= coupon.minPurchase %></td>
                 <td>₹<%= coupon.maxDiscountValue %></td>
                 <td><%= coupon.description %></td>
+                <td><center><i class="mdi mdi-delete" onclick="removeCoupon('<%= coupon._id %>')"></i></center></td>
             </tr>
             <% }); %>
         </tbody>
@@ -47,3 +71,36 @@
   <!-- content-wrapper ends -->
   <!-- partial:../../partials/_footer.html -->
 <%- include('../layouts/adminFooter.ejs') %>
+
+<script>
+  function removeCoupon(id)
+  {
+    Swal.fire({
+      title: 'Are you sure to remove this Coupon?',
+      text: "You won't be able to revert this!",
+      // icon: 'warning',
+      showCancelButton: true,
+      confirmButtonColor: '#3085d6',
+      cancelButtonColor: '#d33',
+      confirmButtonText: 'Remove',
+      timer: 6000
+    }).then((result) => {
+      if (result.isConfirmed) {
+        $.ajax({
+          url:'/admin/removeCoupon',
+          method:'post',
+          data: {
+            id: id,
+          },
+          success:(response)=>
+          {
+            if(response)
+            {
+              location.reload()
+            }
+          }
+        })
+      }
+    })
+  }
+</script>
