--- a/Views/adminViews/orderData.ejs
+++ b/Views/adminViews/orderData.ejs
@@ -13,7 +13,7 @@
       </nav>
     </div>
     <div >
-      <div class="row-lg-12" style=" overflow-y: scroll; ">
+      <div class="row-lg-12" style=" overflow-x: auto; ">
         <div class="col-lg-3 grid-margin stretch-card" >
           <% for (let i = 0; i < products.length; i++) { %>
             <div class="card ml-3">
