--- a/Views/adminViews/updateBanner.ejs
+++ b/Views/adminViews/updateBanner.ejs
@@ -31,7 +31,7 @@
 <div class="card">
   <div class="card-body">
     <h4 class="card-title">Edit the details of the existing banner</h4>
-    <form class="forms-sample" action="/admin/updateBannerPost" method="POST">
+    <form class="forms-sample" action="/admin/updateBannerPost" method="POST" enctype="multipart/form-data" id="myform"  >
       <div class="form-group">
         <center>
           <img class="image" src="/banner-images/<%= banner[0].image %>" alt="Product Image">
@@ -39,21 +39,19 @@
       </div>
       <div class="form-group">
         <label for="exampleInputName1">Title</label>
-        <input type="text" class="form-control" id="exampleInputName1" name="title" value="<%= banner[0].title %>" required>
+        <input type="text" class="form-control" id="name" name="title" value="<%= banner[0].title %>" onkeyup="titleValidation()">
+        <span id="title-error" class="validation-label"></span>
       </div>
       <div class="form-group">
         <label for="exampleTextarea1">Description</label>
-        <textarea class="form-control" id="exampleTextarea1" rows="4" name="description" required > <%= banner[0].description %></textarea>
+        <textarea class="form-control" id="description" rows="4" name="description" onkeyup="descriptionValidation()" > <%= banner[0].description %></textarea>
+        <span id="description-error" class="validation-label"></span>
       </div>
-      
-
       <div class="form-group">
         <label for="productImage">Banner Image:</label>
         <input type="file" class="form-control" name="bimage" id="bimage"> 
       </div>
-
       <input type="hidden" name="id" value="<%= banner[0]._id %>">
- 
       <% if (typeof message !== 'undefined') { %>
         <center>
         <div class="audun_warn">
@@ -75,3 +73,62 @@
   <!-- content-wrapper ends -->
   <!-- partial:../../partials/_footer.html -->
             <%- include('../layouts/adminFooter.ejs') %>
+  <script>
+    const regex = /^(?!\s*$).+/;
+  
+    const titleError = document.getElementById("title-error");
+    const descriptionError = document.getElementById("description-error");
+
+    const myform = document.getElementById("myform");
+  
+    function titleValidation() {
+      const name = document.getElementById("name").value;
+      const nameInput = document.getElementById("name");
+      if (name.length == 0) {
+        titleError.innerHTML = "Title is required";
+        titleError.style.color = "red";
+        nameInput.style.border = "solid 2px red";
+        return false;
+      }
+      if (!name.match(regex)) {
+        titleError.innerHTML = "Write valid Title";
+        titleError.style.color = "red";
+        nameInput.style.border = "solid 2px red";
+        return false;
+      }
+      titleError.innerHTML = "";
+      titleError.style.color = "green";
+      nameInput.style.border = "solid 2px green";
+      return true;
+    }
+  
+    function descriptionValidation() {
+      const name = document.getElementById("description").value;
+      const nameInput = document.getElementById("description");
+      if (name.length == 0) {
+        descriptionError.innerHTML = "Description is required";
+        descriptionError.style.color = "red";
+        nameInput.style.border = "solid 2px red";
+        return false;
+      }
+      if (!name.match(regex)) {
+        descriptionError.innerHTML = "Write valid Description";
+        descriptionError.style.color = "red";
+        nameInput.style.border = "solid 2px red";
+        return false;
+      }
+      descriptionError.innerHTML = "";
+      descriptionError.style.color = "green";
+      nameInput.style.border = "solid 2px green";
+      return true;
+    }
+  
+    myform.addEventListener("submit", (event) => {
+      event.preventDefault();
+      if (!titleValidation() || !descriptionValidation()) {
+        return false;
+      } else {
+        myform.submit();
+      }
+    });
+  </script>
