--- a/Views/adminViews/updateProduct.ejs
+++ b/Views/adminViews/updateProduct.ejs
@@ -70,12 +70,12 @@
 
                 <div class="form-group">
                   <label for="productImage">Product Main Image:</label>
-                  <input type="file" class="form-control" name="image1" id="image" required> 
+                  <input type="file" class="form-control" name="image1" id="image" > 
                 </div>
 
                 <div class="form-group">
                   <label for="productImage">Product Sub Images:</label>
-                  <input type="file" class="form-control" multiple name="image2" id="image" required> 
+                  <input type="file" class="form-control" multiple name="image2" id="image" > 
                 </div>
                 <div class="form-group">
                   <label for="exampleTextarea1">Description</label>
