--- a/Views/adminViews/userManagement.ejs
+++ b/Views/adminViews/userManagement.ejs
@@ -1,3 +1,25 @@
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.1.5/dist/sweetalert2.min.css">
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.1.5/dist/sweetalert2.min.js"></script>
+
+<style>
+.swal2-modal .swal2-title{
+
+  font-size: 25px;
+    line-height: 1;
+    font-weight: 500;
+    color: #f3f7fb;
+    font-weight: initial;
+    margin-bottom: 0;
+ }
+ .swal2-container.swal2-center>.swal2-popup{
+  grid-column: 2;
+    grid-row: 2;
+    align-self: center;
+    BACKGROUND-COLOR: rgb(26 27 34);
+    justify-self: center;
+ }
+</style>
 
 	<%- include('../layouts/adminHeader.ejs') %>
 <!-- partial -->
@@ -36,7 +58,9 @@
                       <td><%= user.fname %> <%= user.lname %></td>
                       <td><%= user.email %></td>
                       <td><%= user.number %></td>
-                      <td><a href="/admin/block?userid=<%= user._id %>"><i class="mdi mdi-block-helper"></i> Block/Unblock</a></td>
+                      <td><a onclick="blockUser('<%= user._id %>')">
+                        <i class="mdi mdi-block-helper"></i> Block/Unblock
+                      </a></td>
                       <% if (user.is_blocked) { %>
                         <td><label class="badge badge-danger">Blocked</label></td>
                       <% } else { %>
@@ -57,3 +81,36 @@
 
 	<%- include('../layouts/adminFooter.ejs') %>
 
+
+<script>
+  function blockUser(userId)
+  {
+    Swal.fire({
+      title: 'Are you sure to change user Status?',
+      text: "",
+      // icon: 'warning',
+      showCancelButton: true,
+      confirmButtonColor: '#3085d6',
+      cancelButtonColor: '#d33',
+      confirmButtonText: 'Change',
+      timer: 60000
+    }).then((result) => {
+      if (result.isConfirmed) {
+        $.ajax({
+          url:'/admin/block',
+          method:'post',
+          data: {
+            userId: userId,
+          },
+          success:(response)=>
+          {
+            if(response)
+            {
+              location.reload()
+            }
+          }
+        })
+      }
+    })
+  }
+</script>
