--- a/Views/layouts/adminHeader.ejs
+++ b/Views/layouts/adminHeader.ejs
@@ -11,6 +11,28 @@
     <link rel="stylesheet" href="../../assets/css/style.css">
     <!-- End layout styles -->
     <link rel="shortcut icon" href="../../assets/images/favicon.png" />
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.1.5/dist/sweetalert2.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.1.5/dist/sweetalert2.min.js"></script>
+
+    <style>
+      .swal2-modal .swal2-title{
+        font-size: 25px;
+          line-height: 1;
+          font-weight: 500;
+          color: #f3f7fb;
+          font-weight: initial;
+          margin-bottom: 0;
+        }
+        .swal2-container.swal2-center>.swal2-popup{
+        grid-column: 2;
+          grid-row: 2;
+          align-self: center;
+          BACKGROUND-COLOR: rgb(26 27 34);
+          justify-self: center;
+        }
+    </style>
   </head>
   <body>
     <div class="container-scroller">
@@ -125,7 +147,7 @@
             </ul>
             <ul class="navbar-nav navbar-nav-right">
               <li class="nav-item dropdown d-none d-lg-block">
-                <a class=" btn btn-outline-light btn-fw" id="createbuttonDropdown" aria-expanded="false" href="/admin/logout" >
+                <a class=" btn btn-outline-light btn-fw" id="createbuttonDropdown" aria-expanded="false" onclick="logOut()" >
                   <i > LOG OUT</i></a>
               </li> 
             </ul>
@@ -134,3 +156,34 @@
             </button>
           </div>
         </nav>
+
+        <script>
+          function logOut()
+          {
+            Swal.fire({
+              title: 'Do you wish to logout ?',
+              // text: "You won't be able to revert this!",
+              // icon: 'warning',
+              showCancelButton: true,
+              confirmButtonColor: '#3085d6',
+              cancelButtonColor: '#d33',
+              confirmButtonText: 'Logout',
+              timer: 6000
+            }).then((result) => {
+              if (result.isConfirmed) {
+                $.ajax({
+                  url:'/admin/logout',
+                  method:'get',
+                
+                  success:(response)=>
+                  {
+                    if(response)
+                    {
+                      location.reload()
+                    }
+                  }
+                })
+              }
+            })
+          }
+        </script>
