--- a/Views/layouts/userHeader.ejs
+++ b/Views/layouts/userHeader.ejs
@@ -33,6 +33,7 @@
 					</ul>
 					<ul class="nav navbar-nav navbar-right">
 						<li class="nav-item"><a href="/cart" class="cart"><span class="ti-bag"></span></a></li>
+						<li class="nav-item"><a href="/wishlist" class="cart"><span class="lnr lnr-heart"></span></a></li>
 						<li class="nav-item">
 							<button class="search"><span class="lnr lnr-magnifier" id="search"></span></button>
 						</li>
