--- a/Views/userViews/category.ejs
+++ b/Views/userViews/category.ejs
@@ -17,9 +17,6 @@
 	<!-- Site Title -->
 	<title>ProGear</title>
 
-	<!--
-            CSS
-            ============================================= -->
 	<link rel="stylesheet" href="css/linearicons.css">
 	<link rel="stylesheet" href="css/owl.carousel.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
@@ -40,9 +37,6 @@
 	<!-- Start Header Area -->
 	<%- include('../layouts/userHeader.ejs') %>
 	<!-- End Header Area -->
-
-	<!-- Start Banner Area -->
-
 	<!-- End Banner Area -->
 	<div class="container">
 		<br><br><br><br><br><br>
@@ -62,30 +56,6 @@
 			<div class="col-xl-9 col-lg-8 col-md-7">
 				<!-- Start Filter Bar -->
 				<div class="filter-bar d-flex flex-wrap align-items-center">
-					<!-- <div class="sorting">
-						<select>
-							<option value="1">Default sorting</option>
-							<option value="1">Default sorting</option>
-							<option value="1">Default sorting</option>
-						</select>
-					</div> -->
-					<!-- <div class="sorting mr-auto">
-						<select>
-							<option value="1">Show 12</option>
-							<option value="1">Show 12</option>
-							<option value="1">Show 12</option>
-						</select>
-					</div> -->
-					<!-- <div class="pagination">
-						<h3><%=category.name%></h3>
-						<a href="#" class="prev-arrow"><i class="fa fa-long-arrow-left" aria-hidden="true"></i></a>
-						<a href="#" class="active">1</a>
-						<a href="#">2</a>
-						<a href="#">3</a>
-						<a href="#" class="dot-dot"><i class="fa fa-ellipsis-h" aria-hidden="true"></i></a>
-						<a href="#">6</a>
-						<a href="#" class="next-arrow"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
-					</div> -->
 				</div>
 				<!-- End Filter Bar -->
 				<!-- Start Best Seller -->
@@ -107,7 +77,7 @@
 											<span class="ti-bag"></span>
 											<p class="hover-text">add to bag</p>
 										</a>
-										<a href="" class="social-info">
+										<a class="social-info" onclick="addtowishlist('<%= product._id %>')">
 											<span class="lnr lnr-heart"></span>
 											<p class="hover-text">Wishlist</p>
 										</a>
@@ -125,32 +95,12 @@
 				<!-- End Best Seller -->
 				<!-- Start Filter Bar -->
 				<div class="filter-bar d-flex flex-wrap align-items-center">
-					<!-- <div class="sorting mr-auto">
-						<select>
-							<option value="1">Show 12</option>
-							<option value="1">Show 12</option>
-							<option value="1">Show 12</option>
-						</select>
-					</div> -->
-					<!-- <div class="pagination">
-						<a href="#" class="prev-arrow"><i class="fa fa-long-arrow-left" aria-hidden="true"></i></a>
-						<a href="#" class="active">1</a>
-						<a href="#">2</a>
-						<a href="#">3</a>
-						<a href="#" class="dot-dot"><i class="fa fa-ellipsis-h" aria-hidden="true"></i></a>
-						<a href="#">6</a>
-						<a href="#" class="next-arrow"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
-					</div> -->
 				</div>
 				<!-- End Filter Bar -->
 			</div>
 		</div>
 	</div>
-	
-				<!-- End Best Seller -->
-				<!-- Start Filter Bar
-	
-				<!-- End Filter Bar -->
+
 			</div>
 		</div>
 	</div>
@@ -246,33 +196,79 @@
 
 	<script>
 		function addtocart(proId,price) {
-		  $.ajax({
-			url: '/addToCart/' + proId + '/' + price,
-			method: 'POST',
-	  
-			success: (response) => {
-			  if (response.status) {
-				Swal.fire({
-					title: 'Added To Cart',
-					text: 'Your Product has been added to Cart',
-					icon: 'success',
-					timer: 5000,
-					confirmButtonColor: '#e47312',
-					showCancelButton: true,
-					cancelButtonColor: '#e47312',
-					confirmButtonText: 'View Cart',
-					cancelButtonText: 'Continue Shopping'
-				}).then((result) => {
-					if (result.isConfirmed) {
-						location.href = '/cart';
-					} else {
-						Swal.close();
-					}
+			$.ajax({
+				url: '/addToCart',
+				method: 'POST',
+				data:{
+					proId:proId,
+					price:price,
+
+				},
+		
+				success: (response) => {
+				if (response.status) {
+					console.log('res',response.status);
+					Swal.fire({
+						title: 'Added To Cart',
+						text: 'Your Product has been added to Cart',
+						icon: 'success',
+						timer: 60000,
+						confirmButtonColor: '#e47312',
+						showCancelButton: true,
+						cancelButtonColor: '#e47312',
+						confirmButtonText: 'View Cart',
+						cancelButtonText: 'Continue Shopping'
+					}).then((result) => {
+						if (result.isConfirmed) {
+							location.href = '/cart';
+						} else {
+							Swal.close();
+						}
 					});
-				
-			  }
-			}
-		  })
+				}
+				},
+				error: () => {
+					location.href = '/login';
+				}
+			})
+		}
+	</script>
+	<script>
+		function addtowishlist(proId) {
+			event.preventDefault()
+			$.ajax({
+				url: '/addToWishlist',
+				method: 'POST',
+				data:{
+					proId:proId
+				},
+		
+				success: (response) => {
+				if (response.status) {
+					console.log('res',response.status);
+					Swal.fire({
+						title: 'Added To Wishlist',
+						text: 'Your Product has been added to Wishlist',
+						icon: 'success',
+						timer: 60000,
+						confirmButtonColor: '#e47312',
+						showCancelButton: true,
+						cancelButtonColor: '#e47312',
+						confirmButtonText: 'View Wishlist',
+						cancelButtonText: 'Continue Shopping'
+					}).then((result) => {
+						if (result.isConfirmed) {
+							location.href = '/wishlist';
+						} else {
+							Swal.close();
+						}
+					});
+				}
+				},
+				error: () => {
+					location.href = '/login';
+				}
+			})
 		}
 	</script>
 </body>
