--- a/Views/userViews/editProfile.ejs
+++ b/Views/userViews/editProfile.ejs
@@ -14,7 +14,7 @@
     <meta name="keywords" content="">
     <!-- meta character set -->
     <meta charset="UTF-8">
-    <!-- Site Title -->
+    <!-- Site Title --> 
     <title>ProGear</title>
 
     <!--CSS -->
@@ -32,24 +32,32 @@
 
 <!--================Tracking Box Area =================-->
 <section class="tracking_box_area section_gap">
+  <!-- <center> -->
   <div class="container">
     <div class="tracking_box_inner">
-      <form class="row tracking_form" action="/updateProfile" method="post" novalidate="novalidate">
+      <div class="row">
+        <div class="col-3"></div>
+        <div class="col-6 mt-5">
+      <form class="row tracking_form" action="/updateProfile" method="post"  id="myform" >
         <div class="col-md-12 form-group">
           <label>First Name</label>
-          <input type="text" class="form-control" id="fname" name="fname" value="<%= userdata.fname %>">
+          <input type="text" class="form-control" id="fname" name="fname" value="<%= userdata.fname %>" onkeyup="fnameValidation()">
+          <span id="fname-error" class="validation-label"></span>
         </div>
         <div class="col-md-12 form-group">
           <label>Last Name</label>
-          <input type="text" class="form-control" id="lname" name="lname" value="<%= userdata.lname %>">
+          <input type="text" class="form-control" id="lname" name="lname" value="<%= userdata.lname %>" onkeyup="lnameValidation()">
+          <span id="lname-error" class="validation-label"></span>
         </div>
         <div class="col-md-12 form-group">
           <label>E-mail</label>
-          <input type="email" class="form-control" id="email" name="email" value="<%= userdata.email %>">
+          <input type="email" class="form-control" id="email" name="email" value="<%= userdata.email %>" onkeyup="emailValidation()">
+          <span id="email-error" class="validation-label"></span>
         </div>
         <div class="col-md-12 form-group">
           <label>Phone Number</label>
-          <input type="number" class="form-control" id="number" name="number" value="<%= userdata.number %>">
+          <input type="number" class="form-control" id="number" name="number" value="<%= userdata.number %>" onkeyup="numberValidation()">
+          <span id="number-error" class="validation-label"></span>
         </div>
         <% if (typeof message !== 'undefined') { %>
           <center>
@@ -66,31 +74,153 @@
         </div>
       </form>
     </div>
+							
+
   </div>
+    </div>
+  </div>
+<!-- </center> -->
 </section>
 
-    <!-- start footer Area -->
-       <%- include('../layouts/userFooter.ejs') %>
-
-    <!-- End footer Area -->
 
 
+    <script>
+      const regex = /^(?!\s*$).+/;
+      const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+      const digitRegex = /^\d{10}$/
+    
+      const fnameError = document.getElementById("fname-error");
+      const lnameError = document.getElementById("lname-error");
+      const emailError = document.getElementById("email-error");
+      const numberError = document.getElementById("number-error");
+    
+      const myform = document.getElementById("myform");
+    
+      function fnameValidation() {
+        const name = document.getElementById("fname").value;
+        const nameInput = document.getElementById("fname");
+        if (name.length == 0) {
+          fnameError.innerHTML = "First Name is required";
+          fnameError.style.color = "red";
+          nameInput.style.border = "solid 2px red";
+          return false;
+        }
+        if (!name.match(regex)) {
+          fnameError.innerHTML = "Write valid First Name";
+          fnameError.style.color = "red";
+          nameInput.style.border = "solid 2px red";
+          return false;
+        }
+        if (name.length>30) {
+          fnameError.innerHTML = "First Name must be less than 50 characters";
+          fnameError.style.color = "red";
+          nameInput.style.border = "solid 2px red";
+          return false;
+        }
+        fnameError.innerHTML = "";
+        fnameError.style.color = "green";
+        nameInput.style.border = "solid 2px green";
+        return true;
+      }
+      function lnameValidation() {
+        const name = document.getElementById("lname").value;
+        const nameInput = document.getElementById("lname");
+        if (name.length == 0) {
+          lnameError.innerHTML = "Last Name is required";
+          lnameError.style.color = "red";
+          nameInput.style.border = "solid 2px red";
+          return false;
+        }
+        if (!name.match(regex)) {
+          lnameError.innerHTML = "Write valid Last Name";
+          lnameError.style.color = "red";
+          nameInput.style.border = "solid 2px red";
+          return false;
+        }
+        if (name.length>30) {
+          fnameError.innerHTML = "Last Name must be less than 50 characters";
+          fnameError.style.color = "red";
+          nameInput.style.border = "solid 2px red";
+          return false;
+        }
+        lnameError.innerHTML = "";
+        lnameError.style.color = "green";
+        nameInput.style.border = "solid 2px green";
+        return true;
+      }
+      function emailValidation() {
+        const name = document.getElementById("email").value;
+        const nameInput = document.getElementById("email");
+        if (name.length == 0) {
+          emailError.innerHTML = "e-mail is required";
+          emailError.style.color = "red";
+          nameInput.style.border = "solid 2px red";
+          return false;
+        }
+        if (!name.match(emailRegex)) {
+          emailError.innerHTML = "Write valid e-mail";
+          emailError.style.color = "red";
+          nameInput.style.border = "solid 2px red";
+          return false;
+        }
+        emailError.innerHTML = "";
+        emailError.style.color = "green";
+        nameInput.style.border = "solid 2px green";
+        return true;
+      }
+
+      function numberValidation() {
+        const name = document.getElementById("number").value;
+        const nameInput = document.getElementById("number");
+        if (name.length == 0) {
+          numberError.innerHTML = "Number is required";
+          numberError.style.color = "red";
+          nameInput.style.border = "solid 2px red";
+          return false;
+        }
+        if (!name.match(regex)) {
+          numberError.innerHTML = "Write valid Number";
+          numberError.style.color = "red";
+          nameInput.style.border = "solid 2px red";
+          return false;
+        }
+        if (!name.match(digitRegex)) {
+          numberError.innerHTML = "Write valid Number";
+          numberError.style.color = "red";
+          nameInput.style.border = "solid 2px red";
+          return false;
+        }
+        numberError.innerHTML = "";
+        numberError.style.color = "green";
+        nameInput.style.border = "solid 2px green";
+        return true;
+      }
+    
+      myform.addEventListener("submit", (event) => {
+        event.preventDefault();
+        if (!fnameValidation() || !lnameValidation() || !emailValidation() || !numberValidation()) {
+          return false;
+        } else {
+          myform.submit();
+        }
+      });
+    </script>
 
 
     <script src="js/vendor/jquery-2.2.4.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
-	 crossorigin="anonymous"></script>
-	<script src="js/vendor/bootstrap.min.js"></script>
-	<script src="js/jquery.ajaxchimp.min.js"></script>
-	<script src="js/jquery.nice-select.min.js"></script>
-	<script src="js/jquery.sticky.js"></script>
-    <script src="js/nouislider.min.js"></script>
-	<script src="js/jquery.magnific-popup.min.js"></script>
-	<script src="js/owl.carousel.min.js"></script>
-	<!--gmaps Js-->
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjCGmQ0Uq4exrzdcL6rvxywDDOvfAu6eE"></script>
-	<script src="js/gmaps.min.js"></script>
-	<script src="js/main.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
+    crossorigin="anonymous"></script>
+    <script src="js/vendor/bootstrap.min.js"></script>
+    <script src="js/jquery.ajaxchimp.min.js"></script>
+    <script src="js/jquery.nice-select.min.js"></script>
+    <script src="js/jquery.sticky.js"></script>
+      <script src="js/nouislider.min.js"></script>
+    <script src="js/jquery.magnific-popup.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
+    <!--gmaps Js-->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjCGmQ0Uq4exrzdcL6rvxywDDOvfAu6eE"></script>
+    <script src="js/gmaps.min.js"></script>
+    <script src="js/main.js"></script>
 
 </body>
 
