--- a/Views/userViews/landing.ejs
+++ b/Views/userViews/landing.ejs
@@ -110,6 +110,11 @@
         visibility: hidden; }
 
 
+
+		.swal2-html-container {
+    color: #ff8932;;
+  }   
+
 	</style>
 </head>
 
@@ -236,6 +241,10 @@
 											<span class="ti-bag"></span>
 											<p class="hover-txt">add cart</p>
 										</a>
+										<a class="social-inf" onclick="addtowishlist('<%= item._id %>')">
+											<span class="lnr lnr-heart"></span>
+											<!-- <p class="hover-text">Wishlist</p> -->
+										</a>
 									</div>
 								</div>
 							</center>
@@ -280,8 +289,13 @@
 	<script>
 		function addtocart(proId,price) {
 			$.ajax({
-				url: '/addToCart/' + proId + '/' + price,
+				url: '/addToCart',
 				method: 'POST',
+				data:{
+					proId:proId,
+					price:price,
+
+				},
 		
 				success: (response) => {
 				if (response.status) {
@@ -290,7 +304,7 @@
 						title: 'Added To Cart',
 						text: 'Your Product has been added to Cart',
 						icon: 'success',
-						timer: 5000,
+						timer: 60000,
 						confirmButtonColor: '#e47312',
 						showCancelButton: true,
 						cancelButtonColor: '#e47312',
@@ -299,6 +313,44 @@
 					}).then((result) => {
 						if (result.isConfirmed) {
 							location.href = '/cart';
+						} else {
+							Swal.close();
+						}
+					});
+				}
+				},
+				error: () => {
+					location.href = '/login';
+				}
+			})
+		}
+	</script>
+	<script>
+		function addtowishlist(proId) {
+			event.preventDefault()
+			$.ajax({
+				url: '/addToWishlist',
+				method: 'POST',
+				data:{
+					proId:proId
+				},
+		
+				success: (response) => {
+				if (response.status) {
+					console.log('res',response.status);
+					Swal.fire({
+						title: 'Added To Wishlist',
+						text: 'Your Product has been added to Wishlist',
+						icon: 'success',
+						timer: 60000,
+						confirmButtonColor: '#e47312',
+						showCancelButton: true,
+						cancelButtonColor: '#e47312',
+						confirmButtonText: 'View Wishlist',
+						cancelButtonText: 'Continue Shopping'
+					}).then((result) => {
+						if (result.isConfirmed) {
+							location.href = '/wishlist';
 						} else {
 							Swal.close();
 						}
