--- a/Views/userViews/product.ejs
+++ b/Views/userViews/product.ejs
@@ -201,35 +201,40 @@
 
 	<script>
 		function addtocart(proId,price) {
-		  $.ajax({
-			url: '/addToCart/' + proId + '/' + price,
-			method: 'POST',
-	  
-			success: (response) => {
-			  if (response.status) {
-				Swal.fire({
-					title: 'Added To Cart',
-					text: 'Your Product has been added to Cart',
-					icon: 'success',
-					timer: 5000,
-					confirmButtonColor: '#e47312',
-					showCancelButton: true,
-					cancelButtonColor: '#e47312',
-					confirmButtonText: 'View Cart',
-					cancelButtonText: 'Continue Shopping'
-				}).then((result) => {
-					if (result.isConfirmed) {
-						location.href = '/cart';
-					} else {
-						Swal.close();
-					}
+			$.ajax({
+				url: '/addToCart',
+				method: 'POST',
+				data:{
+					proId:proId,
+					price:price,
+				},
+		
+				success: (response) => {
+				if (response.status) {
+					console.log('res',response.status);
+					Swal.fire({
+						title: 'Added To Cart',
+						text: 'Your Product has been added to Cart',
+						icon: 'success',
+						timer: 60000,
+						confirmButtonColor: '#e47312',
+						showCancelButton: true,
+						cancelButtonColor: '#e47312',
+						confirmButtonText: 'View Cart',
+						cancelButtonText: 'Continue Shopping'
+					}).then((result) => {
+						if (result.isConfirmed) {
+							location.href = '/cart';
+						} else {
+							Swal.close();
+						}
 					});
-			  }
-			},
-			error: () => {
+				}
+				},
+				error: () => {
 					location.href = '/login';
 				}
-		  })
+			})
 		}
 	</script>
 
